--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Wandering Earth</string>
     <string name="StartGame">开始游戏</string>
-    <string name="Settings">设置</string>
+    <string name="Settings">选项</string>
     <string name="ExitGame">退出游戏</string>
     <string name="ChooseGame">选择关卡</string>
     <string name="Return">返回</string>
