--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
 
         "刘慈欣《流浪地球》</string>
     <string name="LearnMoreMessage">此游戏</string>
+    <string name="MoveButton">开始</string>
 </resources>
