--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,8 @@
     <string name="TextSplash">"     "我出生在刹车时代，地球刚刚停止转动，地球发动机安装在亚洲和美洲大陆上，共有12000台，地球发动机产生的切线推力分量杀住了地球的自转，我们把人类以前的历史叫作前太阳时代，那真是个让人神往的黄金时代啊。"
 
         "刘慈欣《流浪地球》</string>
-    <string name="LearnMoreMessage">此游戏</string>
+    <string name="LearnMoreMessage">此游戏旨在引导大家对于宇宙，对于天体运动有初步了解，部分方面可能不符合科学原理，请见谅</string>
+    <string name="MessageWhenBoom">地球与行星间的距离小于洛希极限，在行星强大的引力下，地球会逐渐解体</string>
+    <string name="MessageInChoose">"   "当有一天太阳系无法生存，人类最终选择带着地球离开扎根无数代的“故乡”，尽管没人能够预料到前方的道路到底是怎样的，但是我们最后还是选择了希望，选择了流浪</string>
     <string name="MoveButton">开始</string>
 </resources>
