--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
 
         "刘慈欣《流浪地球》</string>
     <string name="LearnMoreMessage">此游戏旨在引导大家对于宇宙，对于天体运动有初步了解，部分方面可能不符合科学原理，请见谅</string>
-    <string name="MessageWhenBoom">地球与行星间的距离小于洛希极限，在行星强大的引力下，地球会逐渐解体</string>
+    <string name="MessageWhenBoom">地球与行星间的距离小于洛希极限(Roche limit)，在行星强大的引力下，地球会逐渐解体</string>
     <string name="MessageInChoose">"   "当有一天太阳系无法生存,人类最终选择带着地球离开扎根无数代的“故乡”,尽管没人能够预料到前方的道路到底是怎样的,但是我们最后还是选择了希望,选择了流浪。</string>
     <string name="MoveButton">开始</string>
     <string name="empty"></string>
